--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <style>
     * {
@@ -19,10 +19,9 @@
       background-size: cover;
       background-position: center;
       height: 100vh;
-
     }
 
-    h2welcome {
+    .welcome {
       font-size: 100px;
       color: white;
       position: absolute;
@@ -31,17 +30,16 @@
       transform: translate(-50%, -50%);
     }
 
-    h3listYears {
+    .list-years {
       font-size: 50px;
       color: white;
       position: absolute;
-
       transform: translate(-50%, -50%);
     }
 
-    h2Regular {
+    .regular {
       font-size: 40px;
-      color: transparent;
+      color: white;
       position: absolute;
       top: 80%;
       left: 50%;
@@ -57,14 +55,14 @@
 
     .top-right {
       position: absolute;
-      bottom: 82%;
+      top: 5%;
       right: 5%;
       width: 150px;
     }
 
     .top-left {
       position: absolute;
-      bottom: 74%;
+      top: 5%;
       left: 5%;
       width: 150px;
     }
@@ -76,37 +74,15 @@
       width: 150px;
     }
 
-    input {
-      padding: 8px;
-      font-size: 16px;
-      bottom: 74%;
-      left: 5%;
-    }
-
-    button {
-      padding: 8px 15px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #result {
-      margin-top: 10px;
-      font-weight: bold;
-    }
-
-    /* Centering the answer box */
-    bodyAnswerBox {
+    .answer-box {
       position: absolute;
-      top: auto;
-      /* This ensures it's not stuck to the top */
       bottom: 20%;
-      /* Adjust this value to move it up or down from the bottom */
       left: 50%;
       transform: translate(-50%, 0%);
       text-align: center;
     }
 
-    bodyAnswerBox input {
+    .answer-box input {
       padding: 10px;
       font-size: 16px;
       width: 250px;
@@ -115,7 +91,7 @@
       border-radius: 5px;
     }
 
-    bodyAnswerBox button {
+    .answer-box button {
       padding: 10px 15px;
       font-size: 16px;
       cursor: pointer;
@@ -129,45 +105,35 @@
 </head>
 
 <body>
-  <h2welcome>Welcome</h2welcome>
-  <h3listYears style="top: 90%;
-    left: 30%;">2018-19</h3listYears>
-  <h3listYears style="top: 90%;
-    left: 70%;">2014-15</h3listYears>
-  <h3listYears style="top: 10%;
-    left: 70%;">2012-13</h3listYears>
-  <h3listYears style="top: 10%;
-    left: 30%;">2020-21</h3listYears>
-  <script src="script.js"></script>
-</body>
+  <h2 class="welcome">Welcome</h2>
+  <h3 class="list-years" style="top: 90%; left: 30%;">2018-19</h3>
+  <h3 class="list-years" style="top: 90%; left: 70%;">2014-15</h3>
+  <h3 class="list-years" style="top: 10%; left: 70%;">2012-13</h3>
+  <h3 class="list-years" style="top: 10%; left: 30%;">2020-21</h3>
 
-<bodyMontreal>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Montreal_Canadiens.svg" alt="NHL Logo"
-    class="bottom-right">
-</bodyMontreal>
-<bodyColumbus>
-  <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Columbus_Blue_Jackets_logo.svg" alt="NHL Logo"
-    class="top-right">
-</bodyColumbus>
-<bodyVegas>
-  <img src="https://upload.wikimedia.org/wikipedia/en/a/ac/Vegas_Golden_Knights_logo.svg" alt="NHL Logo"
-    class="top-left">
-</bodyVegas>
-<bodyTampaBay>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Tampa_Bay_Lightning_2011.svg" alt="NHL Logo"
-    class="bottom-left">
-</bodyTampaBay>
+  <div class="bottom-right">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Montreal_Canadiens.svg" alt="Montreal Canadiens Logo">
+  </div>
 
-<body>
-  <h2Regular>... .. ..... .... .. . .. .... .... .. .... ... .... .... ... ... . . ... .. . ..... .. .... .... ... .. ..
-    . ..... ... .... .... .. .. .. . ..... .. .... . . ... .. . . ..... .. . . .... .. . .... . ..... . .... ... ....
-    ... ... . ... . ..... . . ..... .... . ..... . . .... .. </h2Regular>
-</body>
+  <div class="top-right">
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Columbus_Blue_Jackets_logo.svg" alt="Columbus Blue Jackets Logo">
+  </div>
 
-<bodyAnswerBox>
-  <input type="text" id="answer" placeholder="Submit Answer Here....">
-  <button onclick="checkAnswer()">Submit</button>
-  <p id="result"></p>
+  <div class="top-left">
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/ac/Vegas_Golden_Knights_logo.svg" alt="Vegas Golden Knights Logo">
+  </div>
+
+  <div class="bottom-left">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Tampa_Bay_Lightning_2011.svg" alt="Tampa Bay Lightning Logo">
+  </div>
+
+  <h2 class="regular">... .. ..... .... .. . .. .... .... .. .... ... .... .... ... ... . . ... .. . ..... .. .... .... ... .. .. . ..... ... .... .... .. .. .. . ..... .. .... . . ... .. . . ..... .. . . .... .. . .... . ..... . .... ... .... ... ... . ... . ..... . . ..... .... . ..... . . .... .. </h2>
+
+  <div class="answer-box">
+    <input type="text" id="answer" placeholder="Submit Answer Here....">
+    <button onclick="checkAnswer()">Submit</button>
+    <p id="result"></p>
+  </div>
 
   <script>
     function checkAnswer() {
@@ -181,6 +147,7 @@
       }
     }
   </script>
-</bodyAnswerBox>
+
+</body>
 
 </html>
