--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       height: 100vh;
     }
 
+    .center {
+      top: 60%;
+      left: 50%;
+      position: absolute;
+      transform: translate(-50%, -50%);
+      width: 150px;
+      height: 150px;
+    }
+
     .welcome {
       font-size: 100px;
       color: white;
@@ -114,15 +123,22 @@
   <h3 class="listYears" style="top: 10%; left: 70%;">2012-13</h3>
   <h3 class="listYears" style="top: 10%; left: 30%;">2020-21</h3>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Montreal_Canadiens.svg" alt="Montreal Canadiens Logo" class="bottom-right">
-  <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Columbus_Blue_Jackets_logo.svg" alt="Columbus Blue Jackets Logo" class="top-right">
-  <img src="https://upload.wikimedia.org/wikipedia/en/a/ac/Vegas_Golden_Knights_logo.svg" alt="Vegas Golden Knights Logo" class="top-left">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Tampa_Bay_Lightning_2011.svg" alt="Tampa Bay Lightning Logo" class="bottom-left">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Montreal_Canadiens.svg" alt="Montreal Canadiens Logo"
+    class="bottom-right">
+  <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Columbus_Blue_Jackets_logo.svg"
+    alt="Columbus Blue Jackets Logo" class="top-right">
+  <img src="https://upload.wikimedia.org/wikipedia/en/a/ac/Vegas_Golden_Knights_logo.svg"
+    alt="Vegas Golden Knights Logo" class="top-left">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Tampa_Bay_Lightning_2011.svg"
+    alt="Tampa Bay Lightning Logo" class="bottom-left">
+  <img src="Colorado_Avalanche_logo.svg (1).png" alt="Colorado Avalanche Logo" class="center">
 
   <h2 class="regular">
-    ... .. ..... .... .. . .. .... .... .. .... ... .... .... ... ... . . ... .. . ..... .. .... .... ... .. ..
-    . ..... ... .... .... .. .. .. . ..... .. .... . . ... .. . . ..... .. . . .... .. . .... . ..... . .... ... ....
-    ... ... . ... . ..... . . ..... .... . ..... . . .... ..
+    ... .. ..... .... .. . .. .... .... .. .... ... .... .... ... ... . . ... .. . ..... .. .... .... ... .. .. . .....
+    ... .... .... .. .. .. . ..... .. .... . . ... .. . . ..... .. . . .... .. . .... . ..... . .... ... .... ... ... .
+    ... . ..... . . ..... .... . ..... . . .... .. .. .... ... ... .. ..... .... ..... ... ... . ..... . ..... ... ...
+    .... .... . ..... .... .. ... .. ..... .... .. . .. .... .... .. .... ... .... .... ... ... . . ... .. . ..... ..
+    .... ... ... .... .... .. ... . ..... .... ... .... ..... . .. ... .. .. .... .... .... . .. ... .... ..... ...
   </h2>
 
   <div class="answerBox">
