--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </h2>
 
   <div class="answerBox">
-    <input type="text" id="answer" placeholder="Submit Answer Here....">
+    <input type="text" id="answer" placeholder="SUBMIT ANSWER HERE...">
     <button onclick="checkAnswer()">Submit</button>
     <p id="result"></p>
   </div>
