--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <script>
     function checkAnswer() {
       let userInput = document.getElementById("answer").value;
-      let correctAnswer = "Vezina"; // Replace with actual answer
+      let correctAnswer = "Georges"; // Replace with actual answer
 
       if (userInput.trim().toLowerCase() === correctAnswer.toLowerCase()) {
         document.getElementById("result").innerHTML = "✅ Correct!";
